--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@tanstack/react-table": "^8.11.8",
     "axios": "^1.6.3",
     "chart.js": "^4.4.1",
     "localforage": "^1.10.0",
